MODORDERS-1282. Prepare for 13.0.3 Sunflower Bugfix (#1114)
* MODORDERS-1282. Prepare for 13.0.3 Sunflower Bugfix

* Update News for 13.0.3 Sunflower Bugfix release

* [maven-release-plugin] prepare release v13.0.3

* [maven-release-plugin] prepare for next development iteration